[gd_scene load_steps=5 format=3 uid="uid://b6g2ctcvpilhl"]

[ext_resource type="Script" uid="uid://c71omiecq1oqx" path="res://scenes/ingresar_nombres.gd" id="1_auepc"]
[ext_resource type="Texture2D" uid="uid://b8klrm6dm6dv6" path="res://assets/bg-beach-flags.png" id="2_jjulo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jjulo"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.160784, 0.333333, 0.741176, 0.752941)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_auepc"]
content_margin_left = 5.0
content_margin_top = 15.0
bg_color = Color(0.0901961, 0.117647, 0.145098, 1)

[node name="IngresarNombres" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_auepc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1536.0
offset_bottom = 1024.0
scale = Vector2(0.747837, 0.643541)
texture = ExtResource("2_jjulo")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 316.0
offset_top = 165.0
offset_right = 742.0
offset_bottom = 220.0
theme_override_colors/font_color = Color(0.905882, 0.447059, 0.105882, 1)
theme_override_font_sizes/font_size = 40
text = "Ingresen sus nombres"

[node name="NombreJ1_Input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 248.0
offset_right = 471.0
offset_bottom = 279.0
placeholder_text = "Jugador 1"

[node name="NombreJ2_Input" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 249.0
offset_right = 747.0
offset_bottom = 280.0
placeholder_text = "Jugador 2"

[node name="ContinuarButton" type="Button" parent="."]
layout_mode = 0
offset_left = 460.0
offset_top = 314.0
offset_right = 615.0
offset_bottom = 366.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_jjulo")
text = "Continuar"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 887.0
offset_top = 179.0
offset_right = 1149.0
offset_bottom = 533.0
theme_override_styles/panel = SubResource("StyleBoxFlat_auepc")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Ranking" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "üèÜ RANKING üèÜ"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_vertical = 3

[node name="RankingGrid" type="GridContainer" parent="PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 3
